# Claude_Code

./: .gitignore  CLAUDE.md  Claude_Chat_vs_Cowork_vs_Code.pptx  README.md  Subagents_vs_AgentTeams.pptx  build.bat  claude_desktop_config_example.json  generate_excel.py  install_mcp.bat  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  長倉さん_Claude_Code_トラブルシューティング.md
23_om-dispatch/: CLAUDE.md
41_パワまる機器構成/: CLAUDE.md  generate_kiki_kousei.py  vba_code.bas  パワまる機器構成_テンプレート.xlsm
44_業務フローチャートエディタ/: CLAUDE.md  dev.cjs
57_セールスツール整備/: CLAUDE.md
O&Mスキルマップ作成/: O&M_スキルマップ.xlsx  create_skill_map.py
ai-news-app/: index.html  manifest.json
ai-news-bot/: README.md  config.local.json  prompt.md  run-local.ps1  run.sh
claude_cowork/: __init__.py  api_client.py  app.py  chat_view.py  config.py  editor_view.py  file_browser.py  main.py  mcp_server.py  settings_view.py
docs/: architecture.md
meeting-minutes/: app.js  index.html  manifest.json  participants.js  style.css
shingo-ai/: .env.example  package-lock.json  package.json  tsconfig.json
supply-demand-market-bot/: README.md  prompt.md  run-local.ps1  run.sh
tests/: test_api_client.py  test_config.py  test_mcp_server.py
商流図/: create_pptx.py  商流図_FIT発電所PCS交換ソリューション.pptx  商流図_FIT発電所PCS交換ソリューション_改.pptx
坪坂さんタスク/: 260107業務課題.xlsx  analysis_output.json  analysis_output.txt  hr_output.txt  manual_output.txt  schedule_output.txt  ◇業務マニュアルkeiri .xlsx  アレイ配置一覧.xlsx  人事総務業務一覧.xlsx  人事総務部長からのコメント.txt  元管理部部長からのコメント.txt  坪坂さん業務整理_AI効率化分析.xlsx  坪坂さん業務整理_AI効率化分析_v2.xlsx  第16期事業報告書 .pptx  経理年間・月間スケジュール.xlsx
(+90 files in other folders)
